--- a/galeria.html
+++ b/galeria.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/photo-grid.css">
     <link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<title>Dunkelheit</title>
 </head>
 <body>
