--- a/store.html
+++ b/store.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <script src="store.js" async></script>
     </head>
     <body>
@@ -29,7 +30,7 @@
                                 <a class="nav-link" href="#">Compra Online</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sucursales</a>
+                                <a class="nav-link" href="surcursales.html">Sucursales</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Quienes Somos</a>
