--- a/galeria.html
+++ b/galeria.html
@@ -36,7 +36,7 @@
 							<a class="nav-link" href="#">Quienes Somos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Contactos</a>
+							<a class="nav-link" href="contactos.html">Contactos</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="galeria.html">Galeria Productos</a>
