--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+	<meta name="author" content="Esteban Arévalo Herrera"/>
+	<meta name="robots" content="index"/>
+	<meta name="keywords" content="pasteleria, panaderia, chocolateria"/>
+	<meta name="copyright" content="Rocío Martínez"/>
+	<meta name="description" content="Pasteleria Dunkelheit, Concepción, Münich y Tokyo"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-	<title>Dunkelheit</title>
+	<title>Dunkelheit Home</title>
 </head>
 <body>
 	<header>
@@ -27,7 +32,7 @@
 							<a class="nav-link" href="store.html">Catalogo</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Compra Online</a>
+							<a class="nav-link" href="store.html">Compra Online</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="sucursales.html">Sucursales</a>
