--- a/store.html
+++ b/store.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dunkelheit</title>
         <meta name="description" content="This is the description">
+        <meta name="robots" content="noindex"/>
+        <meta name="description" content="Tienda de productos Dunkelheit"/>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <script src="store.js" async></script>
+        <title>Dunkelheit Store</title>
     </head>
     <body>
         <header>
@@ -26,7 +28,7 @@
                                 <a class="nav-link" href="store.html">Catalogo</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Compra Online</a>
+                                <a class="nav-link" href="store.html">Compra Online</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="sucursales.html">Sucursales</a>
