--- a/sucursales.html
+++ b/sucursales.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex"/>
+    <meta name="description" content="Sucursales Dunkelheit a nivel internacional"/>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-	<title>Dunkelheit</title>
+	<title>Dunkelheit Sucursales</title>
 </head>
 <body>
 	<header>
@@ -27,10 +29,10 @@
 							<a class="nav-link" href="store.html">Catalogo</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Compra Online</a>
+							<a class="nav-link" href="store.html">Compra Online</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Sucursales</a>
+							<a class="nav-link" href="sucursales.html">Sucursales</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Quienes Somos</a>
