--- a/store.html
+++ b/store.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="#">Dunkelheit</a>
+                    <a class="navbar-brand" href="index.html">Dunkelheit</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                         aria-label="Toggle navigation">
