--- a/contactos.html
+++ b/contactos.html
@@ -29,9 +29,6 @@
 							<a class="nav-link" href="store.html">Catalogo</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="store.html">Compra Online</a>
-						</li>
-						<li class="nav-item">
 							<a class="nav-link" href="sucursales.html">Sucursales</a>
 						</li>
 						<li class="nav-item">
@@ -89,7 +86,8 @@
             <a href="https://fmovies-online.net"></a>
             <br><style>.mapouter{position:relative;text-align:right;height:500px;width:1080px;}
             </style><a href="https://www.embedgooglemap.net">how to embed google map in html</a>
-            <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1080px;}</style>
+            <style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:100%;}</style>
+			
         </div>
     </div>
 
