--- a/testimonios.html
+++ b/testimonios.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="Esteban Arévalo Herrera"/>
-	<meta name="robots" content="index"/>
+	<meta name="robots" content="noindex"/>
 	<meta name="keywords" content="pasteleria, panaderia, chocolateria"/>
 	<meta name="copyright" content="Rocío Martínez"/>
 	<meta name="description" content="Pasteleria Dunkelheit, Concepción, Münich y Tokyo"/>
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-	<title>Dunkelheit Home</title>
+	<title>Dunkelheit Testimonios</title>
 </head>
 <body>
 	<header>
@@ -76,6 +76,124 @@
 			</a>
 		</div>
 	</section>
+	
+<div class="testimonio">
+	<h2 class="h2"> Testimonios de nuestra distinguida clientela</h1>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="tarjeta-1">
+					<div class="img1"><img src="assets/lugar3.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona1.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>Carola Fernandez</h2>
+						<p>" Tienen variedad en productos, se pueden agendar por wsp las tortas,
+							buena atención, buena relación precio/calidad "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-2">
+					<div class="img1"><img src="assets/lugar6.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona2.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>Lissette Muñoz Bello</h2>
+						<p>" Una de las pocas panaderías que vende las reales pirkas y no esas con 
+							masa de hoja que parecen chaparritas. "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-3">
+					<div class="img1"><img src="assets/lugar1.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona3.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>Graciela Oyarzún</h2>
+						<p>"Un excelente lugar para degustar empanadas y otras delicias,
+							 hoy día de navidad estaba siendo atendido por sus propios dueños,
+							  buen lugar "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-4">
+					<div class="img1"><img src="assets/lugar8.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona4.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>Natalie Lam</h2>
+						<p>" Todo muy rico, el local es super limpio y lo que más me gusta 
+							esta que abren temprano, además tambien atienden  todos los días "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-5">
+					<div class="img1"><img src="assets/lugar5.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona5.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>大越由里子</h2>
+						<p>" Productos frescos, ricos y de buena preparación en un lugar limpio
+							 y atención del personal. Agrego que los precios son  acorde al 
+							 mercado. "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-6">
+					<div class="img1"><img src="assets/lugar7.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona6.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>Varinia Arellano</h2>
+						<p>" Productos deliciosos, frescos, variados y a muy buen precio,
+							 en un amplio y cómodo local y buen stock de productos "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-7">
+					<div class="img1"><img src="assets/lugar9.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona7.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>Álvaro Tapia</h2>
+						<p>" Todo muy rico, me encanta, voy a engordar con todos sus pasteles
+							 y panes de pascua. 😚🍞🍰💞 "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-8">
+					<div class="img1"><img src="assets/lugar2.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona8.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>Jiahui Jiang</h2>
+						<p> "Una panadería con variedad en tortas,pasteles , panes , lacteos 
+							etc. Límpia y una excelente ateción. "</p>
+					</dir>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="tarjeta-9">
+					<div class="img1"><img src="assets/lugar4.jpeg" alt=""></div>
+					<div class="img2"><img src="assets/persona9.jpeg" alt=""></div>
+					<dir class="texto-main">
+						<h2>David Vallet</h2>
+						<p>" Excelente Pan de pascua, le pongo un 10!! Los dulces y pasteles
+							 también, me gusta 👍"</p>
+					</dir>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
 
 	<div class="footer-dark">
 		<footer>
