--- a/sucursales.html
+++ b/sucursales.html
@@ -31,7 +31,7 @@
 							<a class="nav-link" href="sucursales.html">Sucursales</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Quienes Somos</a>
+							<a class="nav-link" href="testimonios.html">Testimonios</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contactos.html">Contactos</a>
