--- a/contactos.html
+++ b/contactos.html
@@ -10,130 +10,137 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-	<title>Dunkelheit Ubicación</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="store.js" async></script>
+	<title>Dunkelheit Contactos</title>
 </head>
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">Dunkelheit</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse"
-					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="store.html">Catalogo</a>
-						</li>
+			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					    <span class="navbar-toggler-icon"></span>
+				    </button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				    <ul class="navbar-nav ml-auto">
+					    <li class="nav-item active">
+						<a class="nav-link" href="store.html">Catalogo</a>
+					    </li>
+					    <li class="nav-item">
+						<a class="nav-link" href="sucursales.html">Sucursales</a>
+					    </li>
+					    <li class="nav-item">
+						<a class="nav-link" href="testimonios.html">Testimonios</a>
+					    </li>
 						<li class="nav-item">
-							<a class="nav-link" href="sucursales.html">Sucursales</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="testimonios.html">Testimonios</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="contactos.html">Contactos</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="galeria.html">Galeria Productos</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-
-
-
-
-	<section>
-		<div id="demo" class="carousel slide" data-ride="carousel">
-			<ul class="carousel-indicators">
-				<li data-target="#demo" data-slide-to="0" class="active"></li>
-				<li data-target="#demo" data-slide-to="1"></li>
-				<li data-target="#demo" data-slide-to="2"></li>
-			</ul>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="assets/cake1.jpeg" alt="Pastel1">
-				</div>
-				<div class="carousel-item">
-					<img src="assets/cake2.jpeg" alt="Pastel2">
-				</div>
-				<div class="carousel-item">
-					<img src="assets/cake3.jpeg" alt="Pastel3">
-				</div>
-			</div>
-			<a class="carousel-control-prev" href="#demo" data-slide="prev">
-				<span class="carousel-control-prev-icon"></span>
-			</a>
-			<a class="carousel-control-next" href="#demo" data-slide="next">
-				<span class="carousel-control-next-icon"></span>
-			</a>
-		</div>
-	</section>
-    
+						<a class="nav-link" href="contactos.html">Contactos</a>
+					    </li>
+					    <li class="nav-item">
+						<a class="nav-link" href="galeria.html">Galeria Productos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container">
-        <h2 class="contact">Dirección de nuestra sucursal Concepción</h2>
-        <div class="gmap_canvas">
-            <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=san%20diego%20concepcion&t=&z=17&ie=UTF8&iwloc=&output=embed"
-                frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+		<div class="title">
+			<h1>Datos de contacto</h1>
+			<p>Estos son los datos de contacto según sucursal</p>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="card text-center">
+					<div class="card-body">
+						<h5 class="card-title">Sucursal Baviera,    Alemania</h5>
+						<p class="card-text">Dirección: Karlsplatz 9 | 80335 München</p>
+						<p class="card-text">Telefono: +49 5642 6632</p>
+						<p class="card-text">E-mail: dunkelger@gmail.com</p>
 
-            </iframe>
-            <a href="https://fmovies-online.net"></a>
-            <br><style>.mapouter{position:relative;text-align:right;height:500px;width:1080px;}
-            </style><a href="https://www.embedgooglemap.net">how to embed google map in html</a>
-            <style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:100%;}</style>
-			
-        </div>
-    </div>
-
-	<div class="footer-dark">
-		<footer>
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-6 col-md-3 item">
-						<h3>Servicios Disponibles</h3>
-						<ul>
-							<li><a href="#">Cursos de resposteria</a></li>
-							<li><a href="#">Envios a domicilio</a></li>
-							<li><a href="#">Sucursales</a></li>
-						</ul>
 					</div>
-					<div class="col-sm-6 col-md-3 item">
-						<h3>Sobre Nosotros</h3>
-						<ul>
-							<li><a href="#">Dunkelheit Concepción</a></li>
-							<li><a href="#">Contacto</a></li>
-							<li><a href="#">Dirección</a></li>
-						</ul>
-					</div>
-					<div class="col-md-6 item text">
-						<h3>Dunkelheit</h3>
-						<p>En Dunkelheit nos apasiona las pasteleria y es nuestro deber entregar un servicio que deje
-							satisfechos a nuestros clientes, junto a nosotros
-							puedes encontrar gran variedad de opciones ya sea para comprar y servir en el local o para
-							llevar de nuestro variado catalogo de pasteles y resposteria.</p>
-					</div>
-				</div>
-				<div class="col item social">
-					<a href="#"><i class="icon ion-social-facebook"></i></a>
-					<a href="#"><i class="icon ion-social-twitter"></i></a>
-					<a href="#"><i class="icon ion-social-instagram"></i></a>
 				</div>
 			</div>
-			<p class="copyright">Dunkelheit © 2022</p>
-	</div>
-	</div>
-	</footer>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="store.js" async></script>
-</body>
+			<div class="col-md-4">
+				<div class="card text-center">
+					<div class="card-body">
+						<h5 class="card-title">Sucursal Tokyo Shibuya, Japón</h5>
+						<p class="card-text">Dirección: Japón, 〒150-8510 Tokyo, Shibuya City</p>
+						<p class="card-text">Telefono: +81 5617 4364</p>
+						<p class="card-text">E-mail: dunkeljpn@gmail.com</p>
 
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card text-center">
+					<div class="card-body">
+						<h5 class="card-title">Sucursal Concepción, Chile</h5>
+						<p class="card-text">Dirección: Av. Chacabuco 1275, Concepción, Bío Bío</p>
+						<p class="card-text">Telefono: +569 5618 6650</p>
+						<p class="card-text">E-mail: dunkelchile@gmail.com</p>
+
+					</div>
+				</div>
+			</div>                 
+		</div>
+        <h2 class="contact">Mapa de nuestra sucursal Concepción</h2>		
+            <div class="gmap_canvas">
+                <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=san%20diego%20concepcion&t=&z=17&ie=UTF8&iwloc=&output=embed"
+                frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                </iframe>
+                    <a href="https://fmovies-online.net"></a>
+                        <br>
+                            <style>.mapouter{position:relative;text-align:right;height:500px;width:1080px;}
+                            </style>
+                                <a href="https://www.embedgooglemap.net">how to embed google map in html</a>
+                                    <style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:100%;}</style>
+			</div>
+    </div>
+<div class="footer-dark">
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-md-3 item">
+					<h3>Servicios Disponibles</h3>
+						<ul>
+							<li><a href="store.html">Compra en linea</a></li>
+							<li><a href="galeria.html">Galeria de productos</a></li>
+							<li><a href="contactos.html">Datos de contacto</a></li>
+							<li><a href="sucursales.html">Sucursales</a></li>
+						</ul>
+				</div>
+					<div class="col-sm-6 col-md-3 item text">
+						<h3> Contactanos !</h3>
+							<p>(+56) 9 5618 6650</p>
+							<p>Opción 1: Compra Telefonica</p>
+							<p>Opción 2: Reserva de mesas</p>
+							<p>Opción 3: Servicio al cliente</p>
+							<p>Opción 4: Contacto con ejecutivo</p>
+							<p>Opción 5: Reclamos y sugerencias</p>
+					</div>
+					    <div class="col-md-6 item text">
+						    <h3>Dunkelheit</h3>
+						        <p>En Dunkelheit nos apasiona las pasteleria y es nuestro deber entregar un servicio que deje
+							    satisfechos a nuestros clientes, junto a nosotros
+							    puedes encontrar gran variedad de opciones ya sea para comprar y servir en el local o para
+							    llevar de nuestro variado catalogo de pasteles y resposteria.</p>
+					    </div>
+				    </div>
+				        <br>
+				            <div class="col item social">
+					            <a href="https://www.facebook.com" target="_blank"><i class="icon ion-social-facebook"></i></a>
+					            <a href="https://twitter.com" target="_blank"><i class="icon ion-social-twitter"></i></a>
+					            <a href="https://www.instagram.com/" target="_blank"><i class="icon ion-social-instagram"></i></a>
+				            </div>
+			        </div>
+			            <p class="copyright">Dunkelheit © 2022</p>
+	                </div>
+	        </div>
+	</footer>
+</div>
+</body>
 </html>
